--- a/app/src/main/res/layout/activity_configure_widget.xml
+++ b/app/src/main/res/layout/activity_configure_widget.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
-    tools:context=".ConfigureWidgetActivity">
+    android:padding="16dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:layout_marginVertical="8dp"
         android:text="create stopwatch"
         android:textColor="@color/black"
         android:textSize="18dp" />
@@ -20,11 +18,29 @@
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="name" />
+        android:hint="name"
+        android:inputType="text" />
 
-    <Button
+    <TextView
+        android:id="@+id/color_picker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="8dp"
+        android:background="@color/purple_500"
+        android:padding="8dp"
+        android:text="Pick color"
+        android:textColor="@color/white"
+        android:textSize="18dp" />
+
+    <TextView
+        android:id="@+id/button_create"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="create" />
+        android:background="@color/purple_500"
+        android:gravity="center"
+        android:padding="8dp"
+        android:text="create"
+        android:textColor="@color/white"
+        android:textSize="18dp" />
 
 </LinearLayout>
