--- a/app/src/main/res/layout/appwidget_stopwatch.xml
+++ b/app/src/main/res/layout/appwidget_stopwatch.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/appwidget_root"
     android:layout_width="120dp"
@@ -16,7 +17,17 @@
         android:gravity="center"
         android:textColor="@color/black"
         android:textSize="14sp"
-        tools:text="Timer name" />
+        tools:text="Loading" />
+
+    <TextView
+        android:id="@+id/last_updated"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        tools:text="updated" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -24,25 +35,19 @@
         android:layout_gravity="center"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/timer_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ProgressBar
+            android:id="@+id/progress"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_gravity="center"
-            android:paddingStart="2dp"
-            android:paddingEnd="2dp"
-            android:textColor="@color/black"
-            tools:text="00:00" />
+            android:visibility="invisible"
+            tools:ignore="ContentDescription"
+            tools:visibility="visible" />
 
-        <ImageButton
-            android:id="@+id/play_or_pause"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center" />
     </LinearLayout>
 
     <TextView
-        android:id="@+id/last_updated"
+        android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
