--- a/app/src/main/res/xml/widget_provider.xml
+++ b/app/src/main/res/xml/widget_provider.xml
@@ -1,5 +1,5 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:configure="pl.marczak.appwidgetdemo.config.ConfigureWidgetActivity"
+    android:configure="pl.marczak.appwidgetdemo.goasyncsample.config.MyWidgetActivity"
     android:initialLayout="@layout/appwidget_stopwatch"
     android:minWidth="110dp"
     android:minHeight="80dp"
