--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,10 @@
     tools:context=".MainActivity">
 
     <androidx.appcompat.widget.SwitchCompat
-        android:layout_margin="16dp"
         android:id="@+id/switch_periodic_update"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:text="periodic update" />
 
     <TextView
@@ -48,5 +48,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/appwidget_stopwatch" />
 </LinearLayout>
