--- a/app/src/main/res/layout/activity_pokedex.xml
+++ b/app/src/main/res/layout/activity_pokedex.xml
@@ -2,8 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="24dp">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="enter pokemon number #"
+        android:textColor="#000"
+        android:textSize="18dp" />
 
     <EditText
         android:id="@+id/poke_id_input"
