--- a/app/src/main/res/drawable/appwidget_pokedex_preview.xml
+++ b/app/src/main/res/drawable/appwidget_pokedex_preview.xml
@@ -6,6 +6,6 @@
         android:width="120dp"
         android:height="60dp" />
 
-    <solid android:color="#ddd" />
+    <solid android:color="#00f" />
 
 </shape>
